--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -5,23 +5,24 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #032A40;
+  --secondary-color: #174a73 ;
+  --accent1-color: #2180A6;
+  --accent2-color: #3BA7BF;
+  --accent2b-color: #F2DCC2;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: font-family: 'sriracha-regular', sans-serif;
+  --paragraph-font: font-family: 'Shadows Into Light', cursive; font-family: 'Josefin Sans', sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
+  --headline-color-on-white: #032A40;  /* headlines on a white background */ 
+  --headline-color-on-color: #F2DCC2; /* headlines on a colored background */ 
   --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
+  --paragraph-color-on-color: #F2DCC2; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #032A40;
   --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
+  --nav-background-color: #032A40;
   --nav-hover-link-color: white;
   --nav-hover-background-color: #396E94;
 }
@@ -30,7 +31,7 @@ Fonts are separated by a & */
 /*  Look around below...but DON'T CHANGE ANYTHING! */
 
 body {
-  max-width: 960px;
+  max-width: 1600px;
   margin: 0 auto;
   padding: 4em;
   font-size: 18px;
