--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -3,6 +3,16 @@ body {
     margin: 0 auto;
 }
 
+.home-title, h2 {
+    font-family: 'candara', 'Bradley Hand', sans-serif;
+    font-size: 2em;
+}
+
+.msg {
+  background-color: #6f7364;
+  line-height: 1.5em;
+}
+
 #content {
     margin: 0 auto;
 }
@@ -24,7 +34,7 @@ nav a, nav a:hover, .home-title, h4, .book, .join, .book:hover, .join:hover, .ms
     color: #f2dcc2;
 }
 
-.logo img, .icon {
+.icon, .logo {
     width: 80px;
 }
 
