--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,49 +1,128 @@
 body {
-    max-width: 1600px;
-    margin: 0 auto;
+    background-color: #032A40
+    font-family: "Shadows Into Light", "Candara", sans-serif
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+h2 {
+    margin: 0;
 }
 
 .home-title, h2 {
-    font-family: 'candara', 'Bradley Hand', sans-serif;
+    font-family: "Shadows Into Light";
     font-size: 2em;
+    margin-top: 10px;
 }
 
-.msg {
-  background-color: #6f7364;
-  line-height: 1.5em;
+h4 {
+    font-family: "Archivo Black", "DM Sans", sans-serif;
+    font-size: 18px;
+    margin-top: 10px;
+    text-decoration: none;
+}
+
+.msg h2{
+  font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
+  line-height: 1.5em
+}
+
+.book, .join {
+    background-color: #396E94;
+    color: #f2dcc2;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
+
+.card-img {
+    border: 10px solid #d9c2a3;
+}
+
+main section img {
+    box-sizing: border-box;
 }
 
 #content {
     margin: 0 auto;
 }
 
-nav a,
 #hero-msg h1, #hero-msg h4, .button-box, main section {
     text-align: center;
 }
 
-#background {
-    height: 725px;
+nav a {
+  font-family: "Shadows Into Light";
+    font-size: 18px;
+    text-decoration: none;
+    color: #f2dcc2;
+    text-align: center;
+    padding: 35px;
 }
 
-body, header, nav a:hover, .book, .join, .book:hover, .join:hover, #background, .msg, footer {
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
+}
+
+#background {
+    height: 725px;
+    background-color: #396E94
+}
+
+.msg {
+    background-color: #032A40;
+    padding: 35px;
+}
+
+.msg p{ 
+    color: #f2dcc2;
+    padding-bottom: 15px;
+  font-family: "Shadows Into Light";
+    font-size: 18px;
+}
+
+body, header, nav a:hover, .book:hover, .join:hover, footer {
     background-color: #032A40;
 }
 
-nav a, nav a:hover, .home-title, h4, .book, .join, .book:hover, .join:hover, .msg h2, .msg p, footer, footer a, footer a:hover, h2 {
+nav a:hover, .home-title, h4, .book:hover, .join:hover, .msg h2, footer a:hover, h2 {
     color: #f2dcc2;
 }
 
-.icon, .logo {
+.logo {
     width: 80px;
+}
+
+.icon {
+    width: 80px;
+    padding-top: 10px;
+}
+
+#logo_link{
+    padding-top: 5px;
 }
 
 #hero-img {
     width: 100%;
 }
 
-nav a, .book, .join, footer a {
+.card-img {
+    border: 10px solid #396E94;
+}
+
+footer{
+    margin-top: 200px;
+    color: #f2dcc2;
+    padding: 25px 50px;
+  font-size: 14px;
+}
+
+footer a {
     text-decoration: none;
+    color: #f2dcc2;
 }
 
 footer p {
@@ -52,4 +131,8 @@ footer p {
 
 footer p a:hover {
     text-decoration: underline;
+}
+
+footer .social img {
+    padding-top: 15px;
 }
