--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -5,6 +5,12 @@ body {
     margin: 0;
     padding: 0;
 }
+
+#content {
+max-width: 1600px;
+margin: 0 auto;
+}
+
 h2 {
     margin: 0;
 }
@@ -44,10 +50,6 @@ h4 {
 
 main section img {
     box-sizing: border-box;
-}
-
-#content {
-    margin: 0 auto;
 }
 
 #hero-msg h1, #hero-msg h4, .button-box, main section {
