--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,140 +1,307 @@
 body {
-    background-color: #032A40
-    font-family: "Shadows Into Light", "Candara", sans-serif
-    font-size: 22px;
-    margin: 0;
-    padding: 0;
+  background-color: #032A40;
+  font-family: "Shadows Into Light", "Candara", sans-serif;
+  font-size: 22px;
+  margin: 0;
+  padding: 0;
 }
 
 #content {
-max-width: 1600px;
-margin: 0 auto;
+  max-width: 1600px;
+  margin: 0 auto;
 }
 
 h2 {
-    margin: 0;
+  margin: 0;
 }
 
-.home-title, h2 {
-    font-family: "Shadows Into Light";
-    font-size: 2em;
-    margin-top: 10px;
+.home-title,
+h2 {
+  font-family: "Shadows Into Light";
+  font-size: 2em;
+  margin-top: 10px;
 }
 
 h4 {
-    font-family: "Archivo Black", "DM Sans", sans-serif;
-    font-size: 18px;
-    margin-top: 10px;
-    text-decoration: none;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-top: 10px;
+  text-decoration: none;
 }
 
-.msg h2{
-  font-family: "DM Sans", sans-serif;
-  font-optical-sizing: auto;
-  line-height: 1.5em
+header {
+  display: grid;
+  grid-template-columns: 150px auto;
+  background-color: #032A40; 
 }
 
-.book, .join {
-    background-color: #396E94;
-    color: #f2dcc2;
-    text-decoration: none;
-    font-size: 18px;
-    padding: 15px 30px;
-    margin-top: 50px;
-    border-radius: 5px;
+#logo_link {
+  padding-top: 5px;
+  justify-self: center;
+  align-self: center;
 }
 
-.card-img {
-    border: 10px solid #d9c2a3;
+.logo {
+  width: 80px;
 }
 
-main section img {
-    box-sizing: border-box;
-}
-
-#hero-msg h1, #hero-msg h4, .button-box, main section {
-    text-align: center;
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 nav a {
   font-family: "Shadows Into Light";
-    font-size: 18px;
-    text-decoration: none;
-    color: #f2dcc2;
-    text-align: center;
-    padding: 35px;
+  font-size: 24px;
+  text-decoration: none;
+  color: #f2dcc2;
+  text-align: center;
+  padding: 35px;
 }
 
-.rivers-card, .camping-card, .rapids-card{
-    margin: 200px 0;
+nav a:hover {
+  color: #f2dcc2;
+  background-color: #396E94
 }
 
-#background {
-    height: 725px;
-    background-color: #396E94
+#hero {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  margin-top: -100px; 
 }
 
-.msg {
-    background-color: #032A40;
-    padding: 35px;
-}
-
-.msg p{ 
-    color: #f2dcc2;
-    padding-bottom: 15px;
-  font-family: "Shadows Into Light";
-    font-size: 18px;
-}
-
-body, header, nav a:hover, .book:hover, .join:hover, footer {
-    background-color: #032A40;
-}
-
-nav a:hover, .home-title, h4, .book:hover, .join:hover, .msg h2, footer a:hover, h2 {
-    color: #f2dcc2;
-}
-
-.logo {
-    width: 80px;
-}
-
-.icon {
-    width: 80px;
-    padding-top: 10px;
-}
-
-#logo_link{
-    padding-top: 5px;
+#hero-box {
+  grid-column: 1 / 4;
+  grid-row: 1 / 3;
+  z-index: -1; 
 }
 
 #hero-img {
-    width: 100%;
+  width: 100%;
+}
+
+#hero-msg {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  margin-top: 100px;
+  text-align: center;
+}
+
+#hero-msg h1 {
+  color: #f2dcc2;
+}
+
+#hero-msg h4 {
+  text-align: center;
+  color: white;
+}
+
+.button-box {
+  text-align: center;
+}
+
+.book,
+.join {
+  background-color: #396E94;
+  color: #f2dcc2;
+  text-decoration: none;
+  font-size: 22x;
+  padding: 15px 30px;
+  border-radius: 5px;
+}
+
+.book {
+  margin-top: 50px;
+}
+
+.book:hover {
+  color: #f2dcc2;
+  background-color: #032A40;
+}
+
+.join {
+  display: inline-block;
+  margin-top: 15px;
+  background: #396E94;
+  padding: 10px 18px;
+  font-weight: 700;
+}
+
+.join:hover {
+  color: #f2dcc2;
+  background-color: #032A40;
+}
+
+.home-grid {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  gap: 0;
+}
+
+.home-grid h2 {
+  color: #f2dcc2;
+}
+
+.rivers-card {
+  grid-column: 2 / 4;
+  grid-row: 2 / 3;
+  text-align: center;
+}
+
+.camping-card {
+  grid-column: 5 / 7;
+  grid-row: 2 / 3;
+  text-align: center;
+}
+
+.rapids-card {
+  grid-column: 8 / 10;
+  grid-row: 2 / 3;
+  text-align: center;
+}
+
+#background {
+  height: 725px;
+  background-color: #396E94;
+  grid-column: 1 / 11;
+  grid-row: 4 / 9;
+}
+
+.mountains {
+  width: 100%;
+  grid-column: 2 / 7;
+  grid-row: 5 / 8;
+  box-shadow: 5px 5px 10px #3ba7bf;
+}
+
+.msg {
+  background-color: #032A40;
+  padding: 35px;
+  grid-column: 6 / 10;
+  grid-row: 6 / 7;
+  box-shadow: 5px 5px 10px #3ba7bf;
+}
+
+.msg h2 {
+  font-family: "DM Sans", sans-serif;
+  line-height: 1.5em;
+  margin-top: 0;
+  color: #f2dcc2;
+}
+
+.msg p {
+  color: #f2dcc2;
+  padding-bottom: 15px;
+  font-family: "Shadows Into Light";
+  font-size: 18px;
 }
 
 .card-img {
-    border: 10px solid #396E94;
+  border: 10px solid #396E94;
+  width: 100%;
+  transition: transform 0.5s;
+  box-shadow: 5px 5px 10px #3ba7bf
 }
 
-footer{
-    margin-top: 200px;
-    color: #f2dcc2;
-    padding: 25px 50px;
-  font-size: 14px;
+.card-img:hover {
+  opacity: 0.6;
+  transform: scale(1.1);
+}
+
+.icon {
+  width: 80px;
+  padding-top: 10px;
+  filter: brightness(0) saturate(100%) invert(69%) sepia(16%) saturate(658%) hue-rotate(164deg) brightness(95%) contrast(92%);
+}
+
+main section img {
+  box-sizing: border-box;
+  text-align: center;
+}
+
+footer {
+  margin-top: 200px;
+  color: #f2dcc2;
+  padding: 25px 50px;
+  font-size: 18px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #032A40;
 }
 
 footer a {
-    text-decoration: none;
-    color: #f2dcc2;
+  text-decoration: none;
+  color: #f2dcc2;
 }
 
 footer p {
-    font-size: 1.2em;
+  font-size: 1.2em;
 }
 
 footer p a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 footer .social img {
-    padding-top: 15px;
+  padding-top: 15px;
+}
+
+
+@media screen and (max-width: 900px) {
+  #hero,
+  .home-grid {
+    display: block;
+    height: auto;
+  }
+
+  nav,
+  footer {
+    flex-direction: column;
+  }
+
+  nav a {
+    display: block;
+    padding: 15px;
+  }
+
+  #hero {
+    margin-top: 0;
+  }
+
+  #hero-msg {
+    margin-top: 0;
+  }
+
+  #hero-msg h4 {
+    display: none;
+  }
+
+  #hero-msg h1 {
+    color: #6f7364;
+  }
+
+  .rivers-card,
+  .camping-card,
+  .rapids-card {
+    margin: 50px auto;
+    width: 60%;
+  }
+
+  #background {
+    display: none;
+  }
+
+  .mountains,
+  .msg {
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+  }
+
+  footer {
+    margin-top: 25px;
+  }
 }
